Bug fix: CUDA error

--- a/4_Dropout_experiment.ipynb
+++ b/4_Dropout_experiment.ipynb
@@ -8,8 +8,8 @@
       "source": [
         "# Dropout Experiments\n",
         "This notebook runs experiments using:\n",
-        "    - BPE dropout for XLM-R\n",
-        "    - Word dropout for Glot500"
+        "  * BPE dropout for XLM-R\n",
+        "  * Word dropout for Glot500"
       ]
     },
     {
@@ -23,13 +23,25 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "source": [
+        "import os\n",
+        "os.environ[\"CUDA_LAUNCH_BLOCKING\"] = \"1\""
+      ],
+      "metadata": {
+        "id": "iwlAAcERzu-y"
+      },
+      "execution_count": 1,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 1,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "zw6W77X52hDG",
-        "outputId": "30550626-37f9-4b39-b7a8-f3024e99703a"
+        "outputId": "d96c0095-8d59-4fc7-d64f-0863831b0ab1"
       },
       "outputs": [
         {
@@ -78,15 +90,15 @@
             "Requirement already satisfied: yarl<2.0,>=1.17.0 in /usr/local/lib/python3.11/dist-packages (from aiohttp->datasets>=2.0.0->evaluate) (1.18.3)\n",
             "Requirement already satisfied: six>=1.5 in /usr/local/lib/python3.11/dist-packages (from python-dateutil>=2.8.2->pandas->evaluate) (1.17.0)\n",
             "Downloading evaluate-0.4.3-py3-none-any.whl (84 kB)\n",
-            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m84.0/84.0 kB\u001b[0m \u001b[31m4.7 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m84.0/84.0 kB\u001b[0m \u001b[31m3.3 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
             "\u001b[?25hDownloading datasets-3.3.0-py3-none-any.whl (484 kB)\n",
-            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m484.9/484.9 kB\u001b[0m \u001b[31m21.3 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m484.9/484.9 kB\u001b[0m \u001b[31m19.8 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
             "\u001b[?25hDownloading dill-0.3.8-py3-none-any.whl (116 kB)\n",
-            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m116.3/116.3 kB\u001b[0m \u001b[31m12.7 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m116.3/116.3 kB\u001b[0m \u001b[31m7.0 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
             "\u001b[?25hDownloading multiprocess-0.70.16-py311-none-any.whl (143 kB)\n",
-            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m143.5/143.5 kB\u001b[0m \u001b[31m16.3 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m143.5/143.5 kB\u001b[0m \u001b[31m10.4 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
             "\u001b[?25hDownloading xxhash-3.5.0-cp311-cp311-manylinux_2_17_x86_64.manylinux2014_x86_64.whl (194 kB)\n",
-            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m194.8/194.8 kB\u001b[0m \u001b[31m21.0 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m194.8/194.8 kB\u001b[0m \u001b[31m13.9 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
             "\u001b[?25hInstalling collected packages: xxhash, dill, multiprocess, datasets, evaluate\n",
             "Successfully installed datasets-3.3.0 dill-0.3.8 evaluate-0.4.3 multiprocess-0.70.16 xxhash-3.5.0\n"
           ]
@@ -106,9 +118,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "Nt-OY_V03gVZ",
-        "outputId": "49f7cc28-ca9c-4941-f655-809762a75e1b"
+        "outputId": "20ea7aa4-bcac-43f5-bc5e-bc5f4cccf29e"
       },
-      "execution_count": 5,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "stream",
@@ -133,9 +145,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "ylVeQAx13hxF",
-        "outputId": "1e1bdcce-f360-45cc-9c8a-43ae1871d644"
+        "outputId": "a1e00480-61e6-4c95-a60f-611e872be4e3"
       },
-      "execution_count": 6,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "stream",
@@ -143,7 +155,7 @@
           "text": [
             "Collecting seqeval\n",
             "  Downloading seqeval-1.2.2.tar.gz (43 kB)\n",
-            "\u001b[?25l     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m0.0/43.6 kB\u001b[0m \u001b[31m?\u001b[0m eta \u001b[36m-:--:--\u001b[0m\r\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m43.6/43.6 kB\u001b[0m \u001b[31m3.2 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[?25l     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m0.0/43.6 kB\u001b[0m \u001b[31m?\u001b[0m eta \u001b[36m-:--:--\u001b[0m\r\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m43.6/43.6 kB\u001b[0m \u001b[31m1.6 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
             "\u001b[?25h  Preparing metadata (setup.py) ... \u001b[?25l\u001b[?25hdone\n",
             "Requirement already satisfied: numpy>=1.14.0 in /usr/local/lib/python3.11/dist-packages (from seqeval) (1.26.4)\n",
             "Requirement already satisfied: scikit-learn>=0.21.3 in /usr/local/lib/python3.11/dist-packages (from seqeval) (1.6.1)\n",
@@ -152,7 +164,7 @@
             "Requirement already satisfied: threadpoolctl>=3.1.0 in /usr/local/lib/python3.11/dist-packages (from scikit-learn>=0.21.3->seqeval) (3.5.0)\n",
             "Building wheels for collected packages: seqeval\n",
             "  Building wheel for seqeval (setup.py) ... \u001b[?25l\u001b[?25hdone\n",
-            "  Created wheel for seqeval: filename=seqeval-1.2.2-py3-none-any.whl size=16161 sha256=71d450728a52e6ffdb36ead6fef448189d7995ff396d513d469f4896651752a6\n",
+            "  Created wheel for seqeval: filename=seqeval-1.2.2-py3-none-any.whl size=16161 sha256=03b35027fc8999836d2d09a937404e9e466e73951210f3dd329fc8018003d4f4\n",
             "  Stored in directory: /root/.cache/pip/wheels/bc/92/f0/243288f899c2eacdfa8c5f9aede4c71a9bad0ee26a01dc5ead\n",
             "Successfully built seqeval\n",
             "Installing collected packages: seqeval\n",
@@ -169,14 +181,14 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "5328684e-3e8c-41bc-b797-a9d1624c4c12"
+        "outputId": "4017c6d3-29a2-4e34-8a4f-a6f47390f056"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Mounted at /content/drive\n"
+            "Drive already mounted at /content/drive; to attempt to forcibly remount, call drive.mount(\"/content/drive\", force_remount=True).\n"
           ]
         }
       ],
@@ -193,7 +205,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "03e41cd8-0de7-470b-fb57-3f810ab379b7"
+        "outputId": "5ff96c89-817b-4935-e2e5-0d61a328ff72"
       },
       "outputs": [
         {
@@ -210,7 +222,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": 3,
       "metadata": {
         "id": "bpmW_ui12UCY"
       },
@@ -231,7 +243,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": 7,
       "metadata": {
         "id": "jgHA_DqW2UCa"
       },
@@ -294,7 +306,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -2170,7 +2182,7 @@
       "metadata": {
         "id": "XBXCsAabu22f"
       },
-      "execution_count": 15,
+      "execution_count": 4,
       "outputs": []
     },
     {
@@ -2180,10 +2192,160 @@
         "xlmr_results2 = automation.batch_tune_eval(xlmr_parameters2)"
       ],
       "metadata": {
-        "id": "Bcy41ChVw6zr"
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 569
+        },
+        "id": "Bcy41ChVw6zr",
+        "outputId": "25469007-0457-47a5-ff59-c3ec7e31cf5b"
       },
       "execution_count": null,
-      "outputs": []
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Starting XLM-R experiments (Part II) with BPE dropout...\n",
+            "\n",
+            "====================================================================================================\n",
+            "Running experiment with BPE dropout on xlmr\n",
+            "Dropout probability: 0.1\n",
+            "Model: xlm-roberta-base\n",
+            "Training data: ['ar_nyuad']\n",
+            "Test data: ur_udtb\n",
+            "====================================================================================================\n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "Some weights of XLMRobertaForTokenClassification were not initialized from the model checkpoint at xlm-roberta-base and are newly initialized: ['classifier.bias', 'classifier.weight']\n",
+            "You should probably TRAIN this model on a down-stream task to be able to use it for predictions and inference.\n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "🚀 Setting up model with 17 labels\n",
+            "✅ Unique labels in dataset: {0, 1, 2, 3, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17}\n",
+            "✅ tag2id mapping: {0: 0, 1: 1, 2: 2, 3: 3, 5: 4, 6: 5, 7: 6, 8: 7, 9: 8, 10: 9, 11: 10, 12: 11, 13: 12, 14: 13, 15: 14, 16: 15, 17: 16}\n",
+            "✅ Unique labels in dataset: {0, 1, 2, 3, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17}\n",
+            "✅ tag2id mapping: {0: 0, 1: 1, 2: 2, 3: 3, 5: 4, 6: 5, 7: 6, 8: 7, 9: 8, 10: 9, 11: 10, 12: 11, 13: 12, 14: 13, 15: 14, 16: 15, 17: 16}\n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "\u001b[34m\u001b[1mwandb\u001b[0m: \u001b[33mWARNING\u001b[0m The `run_name` is currently set to the same value as `TrainingArguments.output_dir`. If this was not intended, please specify a different run name by setting the `TrainingArguments.run_name` parameter.\n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Started Training on Data: ar_nyuad\n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "\u001b[34m\u001b[1mwandb\u001b[0m: Currently logged in as: \u001b[33mscientistamy2000\u001b[0m to \u001b[32mhttps://api.wandb.ai\u001b[0m. Use \u001b[1m`wandb login --relogin`\u001b[0m to force relogin\n",
+            "\u001b[34m\u001b[1mwandb\u001b[0m: Using wandb-core as the SDK backend.  Please refer to https://wandb.me/wandb-core for more information.\n"
+          ]
+        },
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/plain": [
+              "<IPython.core.display.HTML object>"
+            ],
+            "text/html": [
+              "Tracking run with wandb version 0.19.6"
+            ]
+          },
+          "metadata": {}
+        },
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/plain": [
+              "<IPython.core.display.HTML object>"
+            ],
+            "text/html": [
+              "Run data is saved locally in <code>/content/drive/.shortcut-targets-by-id/1bl0mVqtZ4D0FRWLUe43BJc9qg8REnEwv/-Zero-Shot-for-Under-Resourced-Language/wandb/run-20250217_115737-c97g4kg9</code>"
+            ]
+          },
+          "metadata": {}
+        },
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/plain": [
+              "<IPython.core.display.HTML object>"
+            ],
+            "text/html": [
+              "Syncing run <strong><a href='https://wandb.ai/scientistamy2000/huggingface/runs/c97g4kg9' target=\"_blank\">xlmr-bpe-dropout-0.1-ar-ur</a></strong> to <a href='https://wandb.ai/scientistamy2000/huggingface' target=\"_blank\">Weights & Biases</a> (<a href='https://wandb.me/developer-guide' target=\"_blank\">docs</a>)<br>"
+            ]
+          },
+          "metadata": {}
+        },
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/plain": [
+              "<IPython.core.display.HTML object>"
+            ],
+            "text/html": [
+              " View project at <a href='https://wandb.ai/scientistamy2000/huggingface' target=\"_blank\">https://wandb.ai/scientistamy2000/huggingface</a>"
+            ]
+          },
+          "metadata": {}
+        },
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/plain": [
+              "<IPython.core.display.HTML object>"
+            ],
+            "text/html": [
+              " View run at <a href='https://wandb.ai/scientistamy2000/huggingface/runs/c97g4kg9' target=\"_blank\">https://wandb.ai/scientistamy2000/huggingface/runs/c97g4kg9</a>"
+            ]
+          },
+          "metadata": {}
+        },
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/plain": [
+              "<IPython.core.display.HTML object>"
+            ],
+            "text/html": [
+              "\n",
+              "    <div>\n",
+              "      \n",
+              "      <progress value='361' max='1250' style='width:300px; height:20px; vertical-align: middle;'></progress>\n",
+              "      [ 361/1250 02:33 < 06:19, 2.34 it/s, Epoch 0.58/2]\n",
+              "    </div>\n",
+              "    <table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              " <tr style=\"text-align: left;\">\n",
+              "      <th>Epoch</th>\n",
+              "      <th>Training Loss</th>\n",
+              "      <th>Validation Loss</th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "  </tbody>\n",
+              "</table><p>"
+            ]
+          },
+          "metadata": {}
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -2196,7 +2358,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 10,
+      "execution_count": null,
       "metadata": {
         "id": "OaOh7jlv2UCd"
       },
@@ -2230,7 +2392,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 11,
+      "execution_count": null,
       "metadata": {
         "id": "SMVJO8d42UCd",
         "colab": {
@@ -3851,7 +4013,7 @@
     {
       "cell_type": "code",
       "source": [
-        "print(\"Starting GLOT500 experiments with word dropout...\")\n",
+        "print(\"Starting GLOT500 experiments (Part II) with word dropout...\")\n",
         "glot500_results2 = automation.batch_tune_eval(glot500_parameters2)"
       ],
       "metadata": {
@@ -3871,7 +4033,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 12,
+      "execution_count": null,
       "metadata": {
         "id": "C4lORj9w2UCg"
       },
@@ -3901,7 +4063,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 14,
+      "execution_count": null,
       "metadata": {
         "id": "apcEIMZA2UCg",
         "colab": {
